v1.1.11:
- Add indications in the error message of meandifference function if the user has more than two conditions.
- In the vignette, the chromosomes are now imported from the package instead of downloading them from the web.

v1.1.10:
- Export function from MASS to match ggplot2 update.
- Replace SeqinfoForUCSCGenome by retrievechrom in vignette to avoid online resources problems.

v1.1.9:
- Unhide and export .retrievechrom function and use it to create chromtabtest in tests to avoid error due to online ressource problems.
- Update documentation.

v1.1.8:
- Remove acronym in package title.
- Remove listing of technology acronyms in Description of DESCRIPTION.
- In documentation, replace dontrun by donttest if the example cannot be run or takes more than 5 seconds.
- Use tempdir() instead of getwd() by default.
- Change package title from "Transcription Elongation Profile" to "Transcription Elongation Profiling". Acronym "tepr" is kept.
- Remove the joinfiles function that was used during the bash processing.
- kneeallconds can now be run independently of the number of conditions.
- \dontrun is used in the examples of functions handling more than two conditions: plotmulti and teprmulti.
- package is now available on CRAN.


v1.1.7:
- Replace all identical tests by equal in testthat.
- Remove the use of BiocStyle for the vignette.
- Move pictures to inst/extdata.
- Replace markdown image integration with knitr.
- Add check on the type of chromtab at beginning of preprocessing function.
- Remove all uppercase in package name in all files.
- Remove redundant 'in R' when mentionning package name.
- Version submited to CRAN waiting for approval.


v1.1.6:
- Create release to obtain doi on Zenodo.


v1.1.5:
- Update URL to black list repository.
- In vignette, add missing url to cugusi.tsv.


v1.1.3:
- In the subfunction .divideannoinwindows of makewindows, replace hardcoded 200 by nbwindows.
- Add filter chromtab in quickstart of the vignette.